--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-		<style>
-	.blok1 {
-		height: 310px;
-		background: #000;
-	}
-	/*.blok2 {
-		margin-top: 20px;
-	}*/
-	</style>
+
 	</head>
 <body>
 	
@@ -23,24 +15,23 @@
 	
 	<div class="container-fluid index">
 		<div class="row-fluid">
-			<div class="span2" >
-				<div class="left">
-					<ul class="nav nav-list" >
-						<li><a href="work.html">WORK</a></li>
-						<li><a href="why_we.html">WHY WE</a></li>
-						<li><a href="#">ABOUT</a></li>
-						<li><a href="#">CONTACT</a></li>
-					</ul>
-					
-					<a style="position: absolute; bottom: 30px;" href="#"><img src="img/logo_big.svg" /></a>
-				</div>
+			<div class="span3">
+			<div class="left">
+				<ul class="nav nav-list" >
+					<li><a href="work.html">WORK</a></li>
+					<li><a href="why_we.html">WHY WE</a></li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">CONTACT</a></li>
+				</ul>
+				<a href="#"><img style="position: absolute; width: 250px; height: 100px; bottom: 30px; right: 15px;" src="img/logo_big.svg" /></a>
 			</div>
-			<div class="span10" >
+			</div>
+			<div class="span9 right" >
 				<div class="row-fluid">
 					<div class="span12 blok1" >
 						<div class="picture">
 							<a href="#" class="blur">
-								<img style="height: 310px; width: 813px;" src="img/3.jpg" />
+								<img src="img/3.jpg" />
 							</a>
 						</div>
 <!-- 						<div class="text">
@@ -57,7 +48,7 @@
 					<div class="span6 blok2 blok1">
 						<div class="picture">
 							<a href="#" class="blur">
-								<img style="height: 310px; width: 397.938px;" src="img/1.jpg" />
+								<img src="img/1.jpg" />
 							</a>
 						</div>
 <!-- 						<div class="text">
@@ -74,7 +65,7 @@
 					<div class="span6 blok2 blok1">
 						<div class="picture">
 							<a href="#" class="blur">
-								<img style="height: 310px; width: 397.938px;" src="img/2.jpg" />
+								<img src="img/2.jpg" />
 							</a>
 						</div>
 <!-- 						<div class="text">
@@ -93,7 +84,7 @@
 					<div class="span12 blok1 blok2">
 						<div class="picture">
 							<a href="#" class="blur">
-								<img style="height: 310px; width: 813px;" src="img/3.jpg" />
+								<img src="img/3.jpg" />
 							</a>
 						</div>
 <!-- 						<div class="text">
@@ -117,7 +108,7 @@
 					<div class="span3 blok2 blok1">
 						<div class="picture">
 							<a href="#" class="blur">
-								<img style="height: 310px; width: 190px;" src="img/2.jpg" />
+								<img src="img/2.jpg" />
 							</a>
 						</div>
 <!-- 						<div class="text">
@@ -134,7 +125,7 @@
 					<div class="span9 blok2 blok1">
 						<div class="picture">
 							<a href="#" class="blur">
-								<img style="height: 310px; width: 605.563px;" src="img/3.jpg" />
+								<img src="img/3.jpg" />
 							</a>
 						</div>
 <!-- 						<div class="text">
