--- a/why_we.html
+++ b/why_we.html
@@ -44,7 +44,7 @@ $('.modalbox').slideToggle(500);
 	<input type="text" name="name" class="input-box" /><br />
 	<span style="font-size:17pt;">ваш телефон<br />
 	<input type="text" name="number" class="input-box" /><br />
-	<input type="button" name="submit" value="замовити дзвінок" class="button" style="margin-top: 20px; border-style: none; width: 274px;"/>
+	<input type="button" name="submit" value="замовити дзвінок" class="button" />
 	</div>
 </div>
 
@@ -52,8 +52,8 @@ $('.modalbox').slideToggle(500);
 
 	<div class="container-fluid why_we">
 		<div class="row-fluid ">
-			<div class="span3" style="padding-left: 15px; padding-top: 11px;">
-				<a href="index.html"><img src="img/logo_dark.svg" style="width: 110px;"></a>
+			<div class="span3">
+				<a href="index.html"><img class="logo" src="img/logo_dark.svg"></a>
 			</div>
 			<div class="span5 menu">			
 				<a href="#">contact </a>
@@ -68,7 +68,7 @@ $('.modalbox').slideToggle(500);
 				</div>
 			</div>
 		</div>
-		<div class="row-fluid" style="margin-top:83px; padding-left:15px;">
+		<div class="row-fluid nome-make_row">
 			<span class="nome">
 				NOME
 			</span>
@@ -158,7 +158,7 @@ $('.modalbox').slideToggle(500);
 	</div> -->
 	<div class="container-fluid footer">
 		<div class="row-fluid footer_row">
-			<div class="span3" style="padding-top: 61px; width: 155px; margin-right: 155px;">
+			<div class="span3 footer_logo">
 				<a href="index.html"><img src="img/logo_white.svg" /></a>
 			</div>
 			<div class="span8">
